hphp/hack/test/typecheck/strict_switch/noreturn_default.php.exp
File "noreturn_default.php", line 8, characters 15-16:
All cases already covered; a redundant `default` case prevents detecting future errors. If your goal is to guard against invalid values for this type, do an `is` check before the switch. (Typing[4022])
  File "noreturn_default.php", line 9, characters 9-16:
  default declared here
